welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:22: error: not found: value vrouuu
var c:String=vrouuu;
             ^SlugSnail:31: error: reassignment to val
        getCouleurSol=c
                     ^